# travelmate

./: .example.env  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  Tiltfile  app.py  app.yaml  basic_curls.txt  configs.yaml  docker-compose.yaml  docker-compose.yml  junk.txt  main.py  manage.py  manage.sh  models.py  pyproject.toml  requirements.txt
.configs/: gunicorn.py
.local/: seed.py
.local/data/: city_climate.json  city_descriptor.json  itineraries.json  search_history.json  unique_search_history.json  user_saved_itinerary.json
.local/scripts/: popcurls.txt
.precommit/: .pre-commit-config.yaml
api/: tests.py
api/clients/: numbeo.py  openai.py
api/migrations/: 0005_citydescriptorsorm_constraint__unique_city_description.py  0006_remove_citydescriptorsorm_constraint__unique_city_description_and_more.py  0007_itineraryitemsorm.py  0008_alter_itineraryitemsorm_table.py  0009_citycostoflivingorm_and_more.py  0010_uniquesaveditineraryorm.py  0011_gygcitymaporm.py  0012_uniquesaveditineraryorm_city_and_more.py  (+3 more)
contracts/: model_contracts.py
crud/: delete.py  insert.py  read.py  write.py
helpers/: api_validators.py  connector.py  get_secret.py  ipfunctions.py  itenerary.py  string_operators.py
old/: .gcloudignore  .gitignore  Dockerfile  basic_curls.txt  docker-compose.yml  junk.txt  main.py  manage.sh  models.py  requirements.txt
postgresql-directory/: Dockerfile
src/: manage.py
templates/: home.html  itenerary.html  navbar.html
tripagenda/: __init__.py  asgi.py  logging.py  middlewares.py  routers.py  settings.py  views.py
(+116 files in other folders)
