[tool.poetry]
name = "tripagenda"
version = "0.2.0"
description = ""
authors = [
    "Karel Verhoeven <karelrverhoeven@gmail.com>",
    "Jan Hoon <janhoon97@gmail.com>",
    "Coetzee van Staden <coetzee.vs@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
django = "^4.2.7"
fastapi = {extras = ["all"], version = "^0.104.1"}
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.4.2"
unittest-xml-reporting = "^3.2.0"
uvicorn = {extras = ["all"], version = "^0.23.2"}
openai = "^0.28.1"
django-redis = "^5.4.0"
slowapi = "^0.1.8"
google-cloud-secret-manager = "^2.16.4"
django-environ = "^0.11.2"

[tool.poetry.dev-dependencies]
django-stubs = "*"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
